src/gsCore/cinterface/gsCFunctionSet.h

    GISMO_EXPORT void gsFunctionSet_delete(gsCFunctionSet * ptr);
    GISMO_EXPORT void gsFunctionSet_print(gsCFunctionSet * fs);